Basic DataBase added
I have teh database running but I just have to work out some kinks for
actually being able to login. Was last looking at a good way to check if
said name and password existed to the database.

--- a/app/src/main/res/layout/content_resident_login.xml
+++ b/app/src/main/res/layout/content_resident_login.xml
@@ -26,36 +26,36 @@
         android:id="@+id/textView" />
 
     <EditText
+        android:id="@+id/resEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="19dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="19dp"
+        android:layout_marginRight="19dp"
         android:layout_marginTop="144dp"
-        android:id="@+id/editText"
-        android:hint="Enter eagle email" />
+        android:ems="10"
+        android:hint="Enter eagle email"
+        android:inputType="textPersonName" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:layout_below="@+id/editText"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
+        android:layout_below="@+id/resEmail"
+        android:layout_alignRight="@+id/resEmail"
+        android:layout_alignEnd="@+id/resEmail"
         android:layout_marginTop="63dp"
-        android:id="@+id/editText2"
+        android:id="@+id/resPassword"
         android:hint="Enter password" />
 
     <TextView
         android:text="Password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editText2"
+        android:layout_alignBottom="@+id/resPassword"
         android:layout_alignRight="@+id/textView"
         android:layout_alignEnd="@+id/textView"
         android:layout_marginBottom="10dp"
