--- a/app/src/main/res/layout/activity_resident_account.xml
+++ b/app/src/main/res/layout/activity_resident_account.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.example.vilma.fgcuhousing.EventList">
+    tools:context="com.example.vilma.fgcuhousing.ResidentAccount">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,20 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_event_list"
-        android:id="@+id/include" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionAwards"
-        android:layout_width="69dp"
-        android:layout_height="67dp"
-        android:layout_gravity="top|center_horizontal"
-        android:clickable="true"
-        app:backgroundTint="@android:color/transparent"
-        app:fabSize="mini"
-        app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="bottom|center_horizontal"
-        app:rippleColor="@android:color/transparent"
-        app:srcCompat="@drawable/trophy" />
+    <include layout="@layout/content_resident_account" />
 
 </android.support.design.widget.CoordinatorLayout>
