--- a/app/src/main/res/layout/content_event_list.xml
+++ b/app/src/main/res/layout/content_event_list.xml
@@ -14,56 +14,89 @@
     tools:showIn="@layout/activity_event_list">
 
     <SearchView
-        android:layout_width="254dp"
-        android:layout_height="34dp"
+        android:id="@+id/searchView"
+        android:layout_width="227dp"
+        android:layout_height="35dp"
+        android:layout_alignBottom="@+id/btnSearch"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/btnSearch"
-        android:layout_toStartOf="@+id/btnSearch"
-        android:id="@+id/searchView">
+        android:layout_alignParentStart="true">
 
     </SearchView>
 
     <Button
-        android:text="Search Event"
+        android:id="@+id/btnSearch"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
+        android:layout_weight="1"
+        android:text="Search Event"
+        tools:ignore="HardcodedText"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/btnSearch"
-        tools:ignore="HardcodedText" />
-
-    <Button
-        android:text="@string/event_1"
-        android:layout_width="match_parent"
-        android:layout_height="132dp"
-        android:id="@+id/btnEvent1"
-        tools:background="@android:color/holo_blue_dark"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="buttonOnClick" />
+        android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="Filter by:           "
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/btnSearch"
+        android:text="Filter by:           "
+        tools:ignore="HardcodedText"
+        android:layout_marginTop="26dp"
+        android:layout_below="@+id/searchView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp"
-        tools:ignore="HardcodedText" />
+        android:layout_alignParentStart="true" />
 
     <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/spinnerFilter"
+        android:layout_width="125dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:spinnerMode="dropdown"
-        android:layout_alignTop="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_toRightOf="@+id/textView7"
         android:layout_toEndOf="@+id/textView7" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="76dp">
+
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView7"
+        android:layout_marginTop="27dp"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:weightSum="1">
+
+        <Button
+            android:id="@+id/btnEvent1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="20dp"
+            android:onClick="buttonOnClick"
+            android:text="@string/event_1"
+            tools:background="@android:color/holo_blue_dark"
+            android:layout_weight="0.20" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.27"
+            android:text="Button" />
+    </LinearLayout>
 
 </RelativeLayout>
