--- a/app/src/main/res/layout/content_resident_access.xml
+++ b/app/src/main/res/layout/content_resident_access.xml
@@ -14,23 +14,32 @@
     tools:showIn="@layout/activity_resident_access">
 
     <Button
-        android:text="Login"
+        android:id="@+id/btnLoginResidentAccess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="148dp"
-        android:id="@+id/btnLoginResidentAccess"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="buttonOnClick" />
+        android:layout_marginTop="148dp"
+        android:onClick="buttonOnClick"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
+        android:text="Login" />
 
     <Button
-        android:text="Register"
+        android:id="@+id/btnRegisterResidentAccess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="71dp"
-        android:id="@+id/btnRegisterResidentAccess"
-        android:layout_below="@+id/btnLoginResidentAccess"
         android:layout_alignLeft="@+id/btnLoginResidentAccess"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignStart="@+id/btnLoginResidentAccess"
-        android:onClick="buttonOnClick" />
+        android:layout_below="@+id/btnLoginResidentAccess"
+        android:layout_marginTop="71dp"
+        android:onClick="buttonOnClick"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
+        android:text="Register" />
 </RelativeLayout>
