--- a/app/src/main/res/layout/content_awards.xml
+++ b/app/src/main/res/layout/content_awards.xml
@@ -8,95 +8,18 @@
     tools:context="com.example.vilma.fgcuhousing.Awards"
     tools:showIn="@layout/activity_awards">
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
-
-        <GridLayout
-            android:id="@+id/gridLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
-            android:visibility="visible"
-            tools:layout_editor_absoluteX="116dp"
-            tools:layout_editor_absoluteY="16dp">
-
-            <Button
-                android:id="@+id/btn1"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="0"
-                android:layout_margin="10dp"
-                android:layout_row="0"
-                android:text="Award1" />
-
-            <Button
-                android:id="@+id/btn2"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="1"
-                android:layout_margin="10dp"
-                android:layout_row="0"
-                android:text="Award2" />
-
-            <Button
-                android:id="@+id/btn3"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="2"
-                android:layout_margin="10dp"
-                android:layout_row="0"
-                android:text="Award3" />
-
-            <Button
-                android:id="@+id/btn5"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="1"
-                android:layout_margin="10dp"
-                android:layout_row="1"
-                android:text="Award5" />
-
-            <Button
-                android:id="@+id/btn6"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="2"
-                android:layout_margin="10dp"
-                android:layout_row="1"
-                android:text="Award5" />
-
-            <Button
-                android:id="@+id/btn7"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="0"
-                android:layout_margin="10dp"
-                android:layout_row="2"
-                android:text="Award7" />
-
-            <Button
-                android:id="@+id/btn8"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="1"
-                android:layout_margin="10dp"
-                android:layout_row="2"
-                android:text="Award8" />
-
-            <Button
-                android:id="@+id/btn4"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="0"
-                android:layout_margin="10dp"
-                android:layout_row="1"
-                android:text="Award4" />
-
-        </GridLayout>
-    </ScrollView>
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="380dp"
+        android:layout_height="500dp"
+        android:columnWidth="90dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="10dp"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="40dp" />
 
 </android.support.constraint.ConstraintLayout>
