--- a/app/src/main/res/layout/content_resident_account.xml
+++ b/app/src/main/res/layout/content_resident_account.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,126 +12,128 @@
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txtName"
-        android:layout_alignStart="@+id/txtName"
-        android:layout_below="@+id/txtName"
         android:ems="10"
         android:hint="Enter eagle email"
         android:inputType="textPersonName"
         android:text="x@eagle.fgcu.edu"
         tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="71dp" />
+        tools:layout_editor_absoluteY="71dp"
+        android:layout_marginBottom="34dp"
+        android:layout_above="@+id/txtPassword"
+        android:layout_alignLeft="@+id/txtPassword"
+        android:layout_alignStart="@+id/txtPassword"
+        android:layout_alignRight="@+id/autoCompleteTextView"
+        android:layout_alignEnd="@+id/autoCompleteTextView" />
 
     <EditText
         android:id="@+id/txtPassword"
         android:layout_width="233dp"
         android:layout_height="43dp"
-        android:layout_alignEnd="@+id/txtEmail"
-        android:layout_alignRight="@+id/txtEmail"
-        android:layout_below="@+id/txtEmail"
         android:ems="10"
         android:hint="Enter password"
         android:inputType="textPassword"
         android:text="password"
         tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="128dp" />
+        tools:layout_editor_absoluteY="128dp"
+        android:layout_alignBaseline="@+id/textView13"
+        android:layout_alignBottom="@+id/textView13"
+        android:layout_toRightOf="@+id/textView14"
+        android:layout_alignRight="@+id/autoCompleteTextView"
+        android:layout_alignEnd="@+id/autoCompleteTextView" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/txtName"
-        android:layout_alignBottom="@+id/txtName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="19dp"
-        android:layout_toLeftOf="@+id/txtName"
-        android:layout_toStartOf="@+id/txtName"
         android:text="Name:"
         android:textSize="18sp"
         tools:layout_editor_absoluteY="31dp"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        android:layout_above="@+id/txtEmail"
+        android:layout_alignLeft="@+id/textView14"
+        android:layout_alignStart="@+id/textView14"
+        android:layout_marginBottom="29dp" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_alignTop="@+id/txtEmail"
-        android:layout_toLeftOf="@+id/txtEmail"
-        android:layout_toStartOf="@+id/txtEmail"
         android:text="Eagle email:"
         android:textSize="18sp"
         tools:layout_editor_absoluteY="88dp"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        android:layout_alignBaseline="@+id/txtEmail"
+        android:layout_alignBottom="@+id/txtEmail"
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignStart="@+id/textView10" />
 
     <EditText
         android:id="@+id/txtName"
         android:layout_width="262dp"
         android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:ems="10"
         android:hint="Enter name"
         android:inputType="textPersonName"
         android:text="xyz"
         tools:layout_editor_absoluteX="82dp"
-        tools:layout_editor_absoluteY="16dp" />
+        tools:layout_editor_absoluteY="16dp"
+        android:layout_alignBaseline="@+id/textView10"
+        android:layout_alignBottom="@+id/textView10"
+        android:layout_alignLeft="@+id/txtEmail"
+        android:layout_alignStart="@+id/txtEmail"
+        android:layout_alignRight="@+id/autoCompleteTextView"
+        android:layout_alignEnd="@+id/autoCompleteTextView" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/txtPassword"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_toLeftOf="@+id/txtPassword"
-        android:layout_toStartOf="@+id/txtPassword"
         android:text="Password:"
         android:textSize="18sp"
         tools:layout_editor_absoluteY="132dp"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        android:layout_above="@+id/autoCompleteTextView"
+        android:layout_toLeftOf="@+id/btnAwards"
+        android:layout_toStartOf="@+id/btnAwards"
+        android:layout_marginBottom="32dp" />
 
     <AutoCompleteTextView
         android:id="@+id/autoCompleteTextView"
         android:layout_width="195dp"
         android:layout_height="40dp"
-        android:layout_alignLeft="@+id/txtPassword"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignStart="@+id/txtPassword"
-        android:layout_below="@+id/txtPassword"
         android:text="Xbuilding"
         tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="187dp" />
+        tools:layout_editor_absoluteY="187dp"
+        android:layout_marginBottom="37dp"
+        android:layout_above="@+id/btnUpdate"
+        android:layout_toRightOf="@+id/textView14"
+        android:layout_toEndOf="@+id/textView14" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_alignTop="@+id/buildings_list"
-        android:layout_toLeftOf="@+id/buildings_list"
-        android:layout_toStartOf="@+id/buildings_list"
         android:text="Actual building:"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="195dp" />
+        tools:layout_editor_absoluteY="195dp"
+        android:layout_alignBaseline="@+id/autoCompleteTextView"
+        android:layout_alignBottom="@+id/autoCompleteTextView"
+        android:layout_alignLeft="@+id/textView13"
+        android:layout_alignStart="@+id/textView13" />
 
     <Button
         android:id="@+id/btnUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/buildings_list"
-        android:layout_toEndOf="@+id/textView3"
-        android:layout_toRightOf="@+id/textView3"
         android:onClick="buttonOnClick"
         android:text="Update Changes"
         tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="240dp" />
+        tools:layout_editor_absoluteY="240dp"
+        android:layout_marginBottom="18dp"
+        android:layout_above="@+id/btnAwards"
+        android:layout_alignRight="@+id/btnAwards"
+        android:layout_alignEnd="@+id/btnAwards" />
 
     <Button
         android:id="@+id/btnAwards"
@@ -140,7 +142,10 @@
         android:background="@drawable/trophy"
         android:onClick="buttonOnClick"
         tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="360dp" />
+        tools:layout_editor_absoluteY="360dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView17"
@@ -148,6 +153,9 @@
         android:layout_height="wrap_content"
         android:text="See awards:"
         tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="343dp" />
+        tools:layout_editor_absoluteY="343dp"
+        android:layout_alignTop="@+id/btnAwards"
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignStart="@+id/textView10" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
