--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.vilma.fgcuhousing.MainActivity">
+    tools:context="com.example.vilma.fgcuhousing.EventList">
     <item
         android:id="@+id/action_settings"
+        android:checkable="false"
+        android:enabled="true"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        android:visible="true"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/event_manager"
+        android:enabled="true"
+        android:orderInCategory="101"
+        android:title="@string/event_manager"
+        android:visible="true"
         app:showAsAction="never" />
 </menu>
