--- a/app/src/main/res/layout/activity_event_page.xml
+++ b/app/src/main/res/layout/activity_event_page.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:screenOrientation="portrait"
     tools:context="com.example.vilma.fgcuhousing.EventPage">
 
     <android.support.design.widget.AppBarLayout
