Create events code

--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -169,7 +169,7 @@
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnCreateEvent"
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_alignEnd="@+id/btnPoster"
@@ -178,6 +178,7 @@
         android:layout_alignRight="@+id/btnPoster"
         android:layout_alignStart="@+id/textView26"
         android:layout_marginBottom="11dp"
+        android:onClick="buttonOnClick"
         android:text="@string/create_event"
         tools:layout_editor_absoluteX="89dp"
         tools:layout_editor_absoluteY="472dp" />
@@ -189,7 +190,7 @@
         android:text="Insert Poster"
         tools:layout_editor_absoluteX="153dp"
         tools:layout_editor_absoluteY="406dp"
-        android:layout_above="@+id/button3"
+        android:layout_above="@+id/btnCreateEvent"
         android:layout_alignLeft="@+id/spinnerLocation"
         android:layout_alignStart="@+id/spinnerLocation"
         android:layout_marginBottom="9dp" />
