--- a/app/src/main/res/layout/content_event_list.xml
+++ b/app/src/main/res/layout/content_event_list.xml
@@ -59,44 +59,32 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="76dp">
-
-    </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView7"
-        android:layout_marginTop="27dp"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:weightSum="1">
+        android:layout_marginTop="10dp">
 
-        <Button
-            android:id="@+id/btnEvent1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="20dp"
-            android:onClick="buttonOnClick"
-            android:text="@string/event_1"
-            tools:background="@android:color/holo_blue_dark"
-            android:layout_weight="0.20" />
+            android:layout_below="@+id/textView7"
+            android:orientation="vertical"
+            android:visibility="visible"
+            android:weightSum="1">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.27"
-            android:text="Button" />
-    </LinearLayout>
+            <ListView
+                android:id="@+id/list_event_item"
+                android:layout_width="match_parent"
+                android:layout_height="389dp"
+                android:layout_alignParentBottom="true"
+                android:background="#FEFCFF">
+
+
+            </ListView>
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
