--- a/app/src/main/res/layout/content_event_manager.xml
+++ b/app/src/main/res/layout/content_event_manager.xml
@@ -28,6 +28,7 @@
         android:layout_width="123dp"
         android:layout_height="47dp"
         android:text="Edit Events"
+        android:onClick="buttonOnClick"
         tools:layout_editor_absoluteX="105dp"
         tools:layout_editor_absoluteY="202dp"
         android:layout_marginBottom="41dp"
@@ -42,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete Events"
+        android:onClick="buttonOnClick"
         tools:layout_editor_absoluteX="105dp"
         tools:layout_editor_absoluteY="286dp"
         android:layout_marginBottom="28dp"
@@ -56,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View Events Feedback"
+        android:onClick="buttonOnClick"
         tools:layout_editor_absoluteX="78dp"
         tools:layout_editor_absoluteY="380dp"
         android:layout_marginBottom="105dp"
