--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -26,6 +26,7 @@
             android:layout_height="200dp"
             android:layout_margin="8dp"
             android:layout_weight="1.47"
+            android:contentDescription="MovieNight"
             android:scaleType="center"
             android:src="@drawable/movie_night" />
 
