--Messing With Implementing the Award System --Something small to show for now

--- a/app/src/main/res/layout/activity_awardwindow.xml
+++ b/app/src/main/res/layout/activity_awardwindow.xml
@@ -13,6 +13,7 @@
     android:paddingRight="0dp"
     android:paddingStart="0dp"
     android:paddingTop="0dp"
+    android:theme="@android:style/Theme.Dialog"
     android:visibility="visible">
 
     <include
