--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -6,12 +6,11 @@
 
     <TextView
         android:id="@+id/tv_id"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="1"
-        android:textSize="25dp" />
+        android:textSize="14sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +23,6 @@
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_margin="8dp"
             android:layout_weight="1.47"
             android:contentDescription="MovieNight"
             android:scaleType="center"
